# moon-landing-hoax-gaia

./: ANALYSIS.md  README.md  pyproject.toml  登月骗局分析.pptx
.gaia/: compile_metadata.json  ir.json  ir_hash
.gaia/manifests/: bridges.json  exports.json  holes.json  premises.json
.gaia/reviews/self_review/: beliefs.json  parameterization.json
.github-output/: README.md  manifest.json  narrative-outline.md
.github-output/docs/public/data/: beliefs.json  graph.json  meta.json
.github-output/docs/public/data/sections/: conspiracy_claims.md  independent_evidence.md
.github-output/wiki/: Home.md  Inference-Results.md  Module-conspiracy-claims.md  Module-independent-evidence.md  Module-motivation.md
docs/: detailed-reasoning.md
src/moon_landing_hoax/: __init__.py  conspiracy_claims.py  independent_evidence.py  motivation.py
src/moon_landing_hoax/reviews/: self_review.py
