[project]
name = "moon-landing-hoax-gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "huangyuan", email = "huangyuan@dp.tech" }
]
requires-python = ">=3.12"
dependencies = [
    "gaia-lang>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/moon_landing_hoax"]

[tool.gaia]
type = "knowledge-package"
uuid = "a46d1226-f8b4-49d0-adb6-fb2fd83ab44e"
